Fixed issue with landscape orientation white bar at bottom on small height devices

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,9 +12,14 @@ html {
   --white: #FAF0CA;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
 }
+
 /*MAIN GAME CONTENT*/
 
 /*Typography*/
@@ -34,9 +39,9 @@ h3{
 /*Positioning*/
 
 .page-wrapper {
-  position: fixed;
+  position: relative;
   width: 100%;
-  height: 100vh ;
+  min-height: 100vh;
   margin: auto;
   overflow-x: hidden;
 }
@@ -180,16 +185,20 @@ h3{
 
 
 .page-wrapper:before {
-  content: "";
+  content: ' ';
+  display: block;
   position: absolute;
-  z-index: -1;
-  background: url("../images/gladiato.png") repeat center center fixed;
-  background-attachment: fixed;
-  top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0.65;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.6;
+  background-image: url('https://assets.digitalocean.com/labs/images/community_bg.png');
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+  background: url("../images/gladiato.png") no-repeat center center fixed;
 }
 
 .container {
@@ -407,13 +416,13 @@ img {
     display: none;
   }
 
-  .page-wrapper {
+  .page-wrapper{
     min-height: 110vh;
   }
 }
 
-@media screen and (orientation: landscape){
-  .page-wrapper {
-    min-height: 110vw;
+@media screen and (max-height: 450px) and (orientation: landscape){
+  .page-wrapper{
+    min-height: 100vw;
   }
 }
